<resources>
    <string name="app_name">Resume</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_cei">歡迎加入仁寶電腦</string>
    <string name="looking_for_you">We are looking for you!</string>
    <string name="event_format">-%s-</string>
    <string name="start_entering">開始填寫</string>
    <string name="legal_announcement">個資法聲明</string>
    <string name="legal_content_part1">本人同意將本人於仁寶電腦活動留下之聯絡方式及個人資訊，無償且不附帶任何條件提供予「仁寶電腦工業股份有限公司及所屬關係企業」(以下簡稱「仁寶電腦」)蒐集、處理及作為以下特定目的之利用：</string>
    <string name="legal_content_part2">(一)	作為仁寶電腦招募活動時使用\n(二)	作為招募之查閱、聯絡及推薦使用\n(三)	其他另經本人以書面、電子郵件、傳真、網頁按鈕點選同意之特定目的之利用。\n\n同時，本人授權仁寶電腦得就本人在此陳述之內容真實性，進行確認；並且完全瞭解，若後續與仁寶電腦間有聘僱關係，任何不實
陳述將足以構成聘僱關係之終止。</string>
    <string name="agree_content">我已閱讀並接受上述同意書內容</string>
    <string name="no_exit_system">不，離開系統</string>
    <string name="yes_enter_system">是，進入頁面</string>
    <string name="filling_info">仁寶電腦招募資料填寫</string>
    <string name="hint_name">請填寫姓名</string>
    <string name="hint_id_number">請填寫身分證字號或居留證號碼</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="hint_date">YYYY/MM/DD</string>
    <string name="military_none">未役</string>
    <string name="military_waived">免役</string>
    <string name="military_completed">役畢</string>
    <string name="military_current">屆退</string>
    <string name="hint_phone">請填寫手機號碼</string>
    <string name="hint_email">請填寫電子信箱</string>
    <string name="hint_school">請填寫學校名稱</string>
    <string name="hint_major">請填寫就讀科系名稱</string>
    <string name="hint_skill">請填寫相關技能(ex:程式語言、軟體認證)</string>
    <string name="between"> ~ </string>
    <string name="check_data_again">＊請再次檢查資料是否填寫錯誤或未填寫</string>
    <string name="next_step">下一步</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="title_event">場次</string>
    <string name="title_fillingtile">填表時間</string>
    <string name="title_name">姓名</string>
    <string name="title_id_number">身分證字號</string>
    <string name="title_gender">性別</string>
    <string name="title_birthday">出生年月日</string>
    <string name="subject_birthday">出生日期</string>
    <string name="title_military">兵役狀況</string>
    <string name="title_phone">電話號碼</string>
    <string name="title_email">電子郵件</string>
    <string name="title_address">居住地區</string>
    <string name="title_highesteducation">最高學歷</string>
    <string name="title_school">就讀學校</string>
    <string name="title_major">就讀科系</string>
    <string name="title_schoolperiod">就學期間</string>
    <string name="title_schoolstart">就學期間-起</string>
    <string name="title_schoolend">就學期間-迄</string>
    <string name="title_graduatethisyear">今年畢業</string>
    <string name="title_skill">專業技能</string>
    <string name="subject_nolanguagecertification">語言認證-無</string>
    <string name="subject_languagecerttype1">語言認證-有-項目-1</string>
    <string name="subject_languagecert1">語言認證-有-等級/分數-1</string>
    <string name="subject_languagecerttype2">語言認證-有-項目-2</string>
    <string name="subject_languagecert2">語言認證-有-等級/分數-2</string>
    <string name="title_futureplan">未來規劃</string>
    <string name="title_jobtype">求職類型</string>
    <string name="title_jobfunction">應徵項目</string>
    <string name="title_availabledate">可上班日期</string>
    <string name="please_choose">請選擇</string>
    <string name="submit">提交</string>
    <string name="modify">修改</string>
    <string name="header_basicinfo">基本資料</string>
    <string name="header_education">學經歷程</string>
    <string name="header_work">求職意向</string>
    <string name="header_review">預覽簡歷</string>
    <string name="header_complete">填寫完畢</string>
    <string name="thank_content">感謝您的填寫！</string>
    <string name="recruit_data">招募資料</string>
    <string name="event_selection_system">場次選擇系統</string>
    <string name="password">密碼</string>
    <string name="wrong_password">＊密碼輸入錯誤</string>
    <string name="exit">離開</string>
    <string name="login">登入</string>
    <string name="advance_setting">進階設定</string>
    <string name="edit_event">編輯招募場次</string>
    <string name="edit_job_function">編輯工作項目</string>
    <string name="upload">上傳</string>
    <string name="exit_settings">離開設定</string>
    <string name="add">編輯</string>
    <string name="delete">刪除</string>
    <string name="cancel">取消</string>
    <string name="select">選擇</string>
    <string name="ok">確認</string>
    <string name="add_event">新增招募場次</string>
    <string name="delete_event">刪除招募場次</string>
    <string name="delete_event_message">確定刪除場次：｢%s｣？</string>
    <string name="ntu">台灣大學</string>
    <string name="add_job_function">新增工作項目</string>
    <string name="delete_job_function">刪除工作項目</string>
    <string name="delete_job_function_mesage">確定刪除工作項目：｢%s｣？</string>
    <string name="duplicate_event">場次已存在</string>
    <string name="duplicate_job_function">工作項目已存在</string>
    <string name="back_to_welcome">回到首頁</string>
    <string name="cust_event_school">編輯新的招募場次</string>
    <string name="toast_add_new_event">請新增招募場次後再進入</string>
    <string name="delete_jobs_function_mesage">確定刪除以選取的項目？</string>
    <string name="complete">完成</string>
    <string name="other">其他</string>
</resources>
