<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="444dp"
        android:layout_height="540dp"
        android:orientation="vertical"
        android:layout_marginTop="42dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="18dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.15"
            android:gravity="center_horizontal"
            android:textSize="36sp"
            android:text="@string/recruit_data"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:letterSpacing="0.15"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/event_selection_system"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:layout_marginStart="10dp"
            android:letterSpacing="0.15"
            android:gravity="left"
            android:textSize="20sp"
            android:text="@string/password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="6dp"
            android:letterSpacing="0.15"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:id="@+id/password_edittext"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:gravity="right"
            android:letterSpacing="0.15"
            android:textSize="14sp"
            android:textColor="@color/colorRed"
            android:text="@string/wrong_password"
            android:id="@+id/wrong_password_textview"
            android:visibility="invisible"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom|center_horizontal"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_back_2_words"
                android:letterSpacing="0.15"
                android:textSize="18sp"
                android:textColor="@color/textColorWhite"
                android:text="@string/exit"
                android:onClick="onExitButtonClicked"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="168dp"
                android:background="@drawable/btn_next_2_words"
                android:letterSpacing="0.15"
                android:textSize="18sp"
                android:textColor="@color/textColorWhite"
                android:text="@string/login"
                android:onClick="onLoginButtonClicked"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>