<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.cei.sdbg.resume.AgreementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="75dp"
        android:paddingLeft="75dp"
        android:background="@color/colorPrimary"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="67dp"
            android:letterSpacing="0.16"
            android:textSize="28sp"
            android:text="@string/legal_announcement"
        />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pic_compallogo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:textSize="16sp"
            android:letterSpacing="0.5"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/legal_content_part1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:textSize="16sp"
            android:letterSpacing="0.4"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/legal_content_part2"
            />
        
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:letterSpacing="0.3"
            android:text="@string/agree_content"
            android:onClick="onCheckBoxClicked"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="19dp"
            android:paddingRight="19dp"
            android:gravity="bottom"
            android:layout_marginBottom="30dp"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="107dp"
                android:background="@drawable/btn_exit_system"
                android:text="@string/no_exit_system"
                android:textSize="16sp"
                android:textColor="@color/textColorWhite"
                android:onClick="onExitButtonClicked"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_enter_system"
                android:textSize="16sp"
                android:text="@string/yes_enter_system"
                android:textColor="@color/textColorWhite"
                android:enabled="false"
                android:onClick="onEnterButtonClicked"
                android:id="@+id/enter_button"
                />

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
