<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.cei.sdbg.resume.EducationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:letterSpacing="0.15"
            android:textColor="@color/textColorWhite"
            android:background="@color/colorDarkGray"
            android:textSize="28sp"
            android:text="@string/filling_info"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorDarkGray">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ico_black1"
                        />
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="155dp"
                        android:paddingBottom="20dp"
                        android:gravity="bottom|center_horizontal"
                        android:textSize="18sp"
                        android:letterSpacing="0.15"
                        android:textColor="@color/colorHeaderGray"
                        android:text="@string/header_basicinfo"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ico_color2"
                        />
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="155dp"
                        android:paddingBottom="20dp"
                        android:gravity="bottom|center_horizontal"
                        android:textSize="18sp"
                        android:letterSpacing="0.15"
                        android:textColor="@color/colorHeaderYellow"
                        android:text="@string/header_education"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ico_black3"
                        />
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="155dp"
                        android:paddingBottom="20dp"
                        android:gravity="bottom|center_horizontal"
                        android:textSize="18sp"
                        android:letterSpacing="0.15"
                        android:textColor="@color/colorHeaderGray"
                        android:text="@string/header_work"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ico_black4"
                        />
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="155dp"
                        android:paddingBottom="20dp"
                        android:gravity="bottom|center_horizontal"
                        android:textSize="18sp"
                        android:letterSpacing="0.15"
                        android:textColor="@color/colorHeaderGray"
                        android:text="@string/header_review"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ico_black5"
                        />
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="155dp"
                        android:paddingBottom="20dp"
                        android:gravity="bottom|center_horizontal"
                        android:textSize="18sp"
                        android:letterSpacing="0.15"
                        android:textColor="@color/colorHeaderGray"
                        android:text="@string/header_complete"
                        />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_marginTop="58dp"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="104dp"
                    android:src="@drawable/ico_arrow"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="87dp"
                    android:src="@drawable/ico_arrow"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="93dp"
                    android:src="@drawable/ico_arrow"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="91dp"
                    android:src="@drawable/ico_arrow"
                    />

            </LinearLayout>
        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:paddingLeft="45dp"
                android:paddingRight="75dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="48dp"
                        android:letterSpacing="0.15"
                        android:textSize="20sp"
                        android:text="@string/title_highesteducation"
                        android:id="@+id/highesteducation_textview"
                        />
                    <Spinner
                        android:layout_width="200dp"
                        android:layout_height="48dp"
                        android:id="@+id/highesteducation_spinner"
                        android:textSize="20sp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="48dp"
                        android:letterSpacing="0.15"
                        android:textSize="20sp"
                        android:text="@string/title_school"
                        android:id="@+id/school_textview"
                        />
                    <EditText
                        android:layout_width="356dp"
                        android:layout_height="48dp"
                        android:letterSpacing="0.15"
                        android:hint="@string/hint_school"
                        android:id="@+id/school_edittext"
                        android:textSize="20sp"
                        />
                </LinearLayout>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="153dp"
                    android:layout_height="48dp"
                    android:letterSpacing="0.15"
                    android:textSize="20sp"
                    android:text="@string/title_major"
                    android:id="@+id/major_textview"
                    />
                <EditText
                    android:layout_width="356dp"
                    android:layout_height="48dp"
                    android:letterSpacing="0.15"
                    android:hint="@string/hint_major"
                    android:id="@+id/major_edittext"
                    android:textSize="20sp"
                    />
            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="48dp"
                        android:letterSpacing="0.15"
                        android:textSize="20sp"
                        android:text="@string/title_schoolperiod"
                        android:id="@+id/schoolperiod_textview"
                        />
                    <EditText
                        android:layout_width="155dp"
                        android:layout_height="48dp"
                        android:letterSpacing="0.05"
                        android:hint="@string/hint_date"
                        android:focusable="false"
                        android:gravity="center_horizontal"
                        android:id="@+id/schoolstart_edittext"
                        android:textSize="20sp"
                        android:onClick="onSchoolStartButtonClicked"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginStart="3dp"
                        android:textSize="20sp"
                        android:text="@string/between"
                        />
                    <EditText
                        android:layout_width="155dp"
                        android:layout_height="48dp"
                        android:letterSpacing="0.05"
                        android:focusable="false"
                        android:gravity="center_horizontal"
                        android:hint="@string/hint_date"
                        android:id="@+id/schoolend_edittext"
                        android:textSize="20sp"
                        android:onClick="onSchoolEndButtonClicked"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="48dp"
                        android:letterSpacing="0.15"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        android:text="@string/title_graduatethisyear"
                        android:id="@+id/graduatethisyear_textview"
                        />
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:id="@+id/graduatethisyear_radiogroup"
                        >
                        <RadioButton
                            android:layout_width="115dp"
                            android:layout_height="match_parent"
                            android:textSize="18sp"
                            android:text="@string/yes"
                            android:checked="true"
                            android:id="@+id/yes_radiobutton"
                            />
                        <RadioButton
                            android:layout_width="115dp"
                            android:layout_height="match_parent"
                            android:textSize="18sp"
                            android:text="@string/no"
                            android:id="@+id/no_radiobutton"
                            />
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="48dp"
                        android:gravity="top"
                        android:letterSpacing="0.15"
                        android:textSize="20sp"
                        android:text="@string/title_skill"
                        android:id="@+id/skill_textview"
                        />
                    <EditText
                        android:layout_width="317dp"
                        android:layout_height="wrap_content"
                        android:letterSpacing="0.15"
                        android:gravity="center_horizontal"
                        android:hint="@string/hint_skill"
                        android:id="@+id/skill_edittext"
                        android:maxLines="5"
                        android:textSize="20sp"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:letterSpacing="0.15"
                    android:textColor="@color/colorRed"
                    android:text="@string/check_data_again"
                    android:visibility="invisible"
                    android:id="@+id/check_data_textview"
                    />
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="31dp"
            android:layout_marginEnd="81dp"
            android:orientation="vertical"
            android:gravity="bottom|right">
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/btn_next"
                android:letterSpacing="0.15"
                android:textSize="18sp"
                android:textColor="@color/textColorWhite"
                android:textAlignment="center"
                android:text="@string/next_step"
                android:onClick="onNextButtonClicked"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
