<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="444dp"
        android:layout_height="540dp"
        android:orientation="vertical"
        android:layout_marginTop="42dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="18dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.15"
            android:gravity="center_horizontal"
            android:textSize="36sp"
            android:text="@string/edit_job_function"
            />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="42dp"
            android:choiceMode="singleChoice"
            android:fadeScrollbars="false"
            android:footerDividersEnabled="false"
            android:id="@+id/jobfunction_listview"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom|center_horizontal"
            >
            <!--<Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_back_2_words"
                android:letterSpacing="0.15"
                android:textSize="18sp"
                android:textColor="@color/textColorWhite"
                android:text="@string/cancel"
                android:id="@+id/btn_job_cancel"
                />-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/btn_back_2_words"
                android:letterSpacing="0.15"
                android:textSize="18sp"
                android:textColor="@color/textColorWhite"
                android:text="@string/add"
                android:id="@+id/btn_job_delete"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/btn_2_words"
                android:letterSpacing="0.15"
                android:textSize="18sp"
                android:textColor="@color/textColorWhite"
                android:text="+"
                android:id="@+id/btn_job_edit"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/btn_next_2_words"
                android:letterSpacing="0.15"
                android:textSize="18sp"
                android:textColor="@color/textColorWhite"
                android:text="@string/complete"
                android:id="@+id/btn_job_ok"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>